--- a/1-responsive-web-design-certification/8-responsive-web-design-projects/1-build-a-tribute-page/index.html
+++ b/1-responsive-web-design-certification/8-responsive-web-design-projects/1-build-a-tribute-page/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html>
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -15,7 +17,7 @@
           <p class="card-text text-center text-light" id="img-caption">It is said that Sigmund Freud enjoyed smoking twenty cigars a day for the majority of his life.</p>
         </div>
       </div>
-      <div class="container">
+      <div class="container" id="tribute-info">
         <h4 class="font-weight-light text-center my-4">Highlights of the Life and Theories of Sigmund Freud:</h4>
         <div class="card-columns">
           <div class="card">
@@ -100,7 +102,8 @@
         <a id="tribute-link" href="https://www.iep.utm.edu/freud" target="_blank" class="text-warning">Internet Encyclopedia of Philosophy</a>, where you can find countless peer-reviewed submissions on Dr. Sigmund Freud and many other incredible human beings.</h4>
       </div>
   </div>
-     <footer class="footer text-center text-light py-1">
+  <footer class="footer text-center text-light py-1">
     <h5 class="font-weight-light">Written and coded by <a href="https://www.freecodecamp.org/portfolio/stefaniedev" target="_blank" class="text-warning">Stefanie Feltman</a>.</h5>
   </footer>
 </body>
+</html>
