--- a/1-responsive-web-design-certification/8-responsive-web-design-projects/2-build-a-survey-form/index.html
+++ b/1-responsive-web-design-certification/8-responsive-web-design-projects/2-build-a-survey-form/index.html
@@ -14,7 +14,7 @@
     <div class="jumbotron bg-light">
         <div class="container rounded p-5" id="main">
             <div class="container text-center">
-                <h1 id="title">Root & Fruit Food Survey</h1>
+                <h1 id="title">Fruit & Root Food Survey</h1>
                 <p id="description">Take a survey about the types of foods you eat on a daily basis.</p>
             </div>
             <div class="container px-5">
