--- a/1-responsive-web-design-certification/8-responsive-web-design-projects/5-build-a-personal-portfolio-webpage/index.html
+++ b/1-responsive-web-design-certification/8-responsive-web-design-projects/5-build-a-personal-portfolio-webpage/index.html
@@ -16,7 +16,7 @@
     <!-- slim mini jQuery -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 
-    <!-- scrollspy which uses bootstrap & javascript -->
+    <!-- scrollspy via bootstrap & javascript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script>
@@ -84,7 +84,7 @@
 						<img class="img-fluid img-thumbnail" src="https://farm5.staticflickr.com/4776/40158788604_a9f4699bc3_o.jpg" alt="Project">
 					</div>
 				</div>
-				<h2 class="textP font-weight-light py-5">I'm a full stack developer who loves working to simplify and enhance the user experience to create a seamless exchange between the client and server. Currently I'm bringing my unique, logical perspective to projects right here in San Francisco.</h2>
+				<h2 class="textP font-weight-light py-5">I'm a full stack developer who loves simplifying and enhancing the user experience to create a seamless exchange between the user and the content. Currently I'm bringing my unique, logical perspective to projects right here in San Francisco.</h2>
 		</div>
 	</div>
 
